Bug 97777:  make shrink wrapping of absolutely positioned elements work reliably by using unconstrained available width when BRS_SHRINKWRAPWIDTH is set.  Patch from Arunan Bala <arunan_bala@hotmail.com>.  r=roc  sr=dbaron